// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLoading when this.props.type is checkbox matches snapshot 1`] = `
<ToggleWrapper
  isActive={false}
  type="checkbox"
/>
`;

exports[`withLoading when this.props.type is not checkbox or radio matches snapshot 1`] = `
<ToggleWrapper
  isActive={false}
  onToggle={[MockFunction]}
/>
`;

exports[`withLoading when this.props.type is radio matches snapshot 1`] = `
<ToggleWrapper
  isActive={false}
  type="radio"
/>
`;
